--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -21,7 +21,7 @@
 	// load
 	function load(settings, onChange)
 	{
-		initModal(settings.modal);
+		//initModal(settings.modal);
 		_load(settings, onChange);
 		globalParams = settings;
 	}
