--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -104,16 +104,16 @@
 						<p class="subtitle translate">connectionInformation</p>
 						
 						<div class="input-field col s2 m2">
-							<input class="value" id="ip" type="text" />
-							<label for="ip" class="translate">ip</label>
+							<input class="value" id="bridgeIp" type="text" />
+							<label for="bridgeIp" class="translate">ip</label>
 						</div>
 						<div class="input-field col s1 m1">
-							<input class="value" id="port" type="number" placeholder="80" />
-							<label for="port" class="translate">port</label>
+							<input class="value" id="bridgePort" type="number" placeholder="80" />
+							<label for="bridgePort" class="translate">port</label>
 						</div>
 						<div class="input-field col s3 m3">
-							<input class="value" id="user" type="text" />
-							<label for="user" class="translate">user</label>
+							<input class="value" id="bridgeUser" type="text" />
+							<label for="bridgeUser" class="translate">user</label>
 						</div>
 						<div class="input-field col s6 m6"></div>
 					</div>
