--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -124,7 +124,7 @@
 		<!-- DONATE -->
 		<div id="donate" class="col s12">
 		
-			<!-- Hue Bridge -->
+			<!-- Donation -->
 			<div class="row">
 				<div class="col s12 m12">
 					<div class="row" style="margin-bottom: 0">
