--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -264,6 +264,11 @@
 										<input class="value" id="syncScenesRecycled" type="checkbox" />
 										<label for="syncScenesRecycled" class="translate">syncRecycled</label>
 									</div>
+									
+									<div style="display: block">
+										<input class="value" id="syncScenesDuplicates" type="checkbox" />
+										<label for="syncScenesDuplicates" class="translate">syncScenesDuplicates</label>
+									</div>
 								</div>
 							</div>
 							
