--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -434,8 +434,15 @@
 									<div style="display: block">
 										<p class="subtitle translate">hueToXYInfo</p>
 										
-										<input class="value" id="hueToXY" type="checkbox" />
-										<label for="hueToXY" class="translate">hueToXY</label>
+										<div style="display: block">
+											<input class="value" id="hueToXY" type="checkbox" />
+											<label for="hueToXY" class="translate">hueToXY</label>
+										</div>
+										
+										<div style="display: block">
+											<input class="value" id="ctToXY" type="checkbox" />
+											<label for="ctToXY" class="translate">ctToXY</label>
+										</div>
 									</div>
 								</div>
 							</div>
