https://github.com/Zefau/ioBroker.hue-extended/issues/38

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -437,6 +437,16 @@
 							<div class="row">
 								<div class="input-field col s12 m12">
 									<div style="display: block">
+										<p class="subtitle translate">briWhenNotReachableInfo</p>
+										
+										<input class="value" id="briWhenNotReachable" type="checkbox" />
+										<label for="briWhenNotReachable" class="translate">briWhenNotReachable</label>
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="input-field col s12 m12">
+									<div style="display: block">
 										<p class="subtitle translate">hueToXYInfo</p>
 										
 										<div style="display: block">
