add deconz alarmsystems resolves https://github.com/iobroker-community-adapters/ioBroker.hue-extended/issues/180 for me

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -352,6 +352,11 @@
 									<label for="syncSensorsRecycled" class="translate">syncRecycled</label>
 								</div>
 							</div>
+
+							<div style="display: block">
+								<input class="value" id="syncAlarmsystems" type="checkbox" />
+								<label for="syncAlarmsystems" class="translate">syncAlarmsystems</label>
+							</div>
 						</div>
 						<div class="col s3 m3" style="margin: 0">
 							<div class="row">
